[package]
name = "need_sleep_back"
version = "0.1.0"
authors = ["Maël Naccache Tüfekçi <contact@maeln.com>"]
edition = "2018"
license = "CECILL-2.1"
readme = "README.md"
repository = "https://github.com/maeln/need_sleep_back"
keywords = ["sleep", "tracker", "backend"]
description = "A backend for NEED SLEEP a sleep tracker."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
tslite = { path = "../tslite" }
lazy_static = "1.4.0"